Доработки + Unit-тесты.

--- a/Bwl.Imaging.UnitTests/My Project/Resources.resx
+++ b/Bwl.Imaging.UnitTests/My Project/Resources.resx
@@ -118,7 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="_4x3_krgb" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\4x3-krgb.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_4x3_gray" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\_4x3-gray.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_4x3_rgb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\_4x3-rgb.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
