--- a/Bwl.Imaging.UnitTests/My Project/Resources.resx
+++ b/Bwl.Imaging.UnitTests/My Project/Resources.resx
@@ -124,4 +124,16 @@
   <data name="_4x3_rgb" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\_4x3-rgb.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gray24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gray24.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gray25" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gray25.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rgbw24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rgbw24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rgbw25" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rgbw25.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
