Черновая реализация 'KeepAspectRatio'.

--- a/Bwl.Imaging.Test/TestForm2.resx
+++ b/Bwl.Imaging.Test/TestForm2.resx
@@ -117,28 +117,89 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="_pictureBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="_selectedObjectID.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="DisplayControl2.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAW0AAAE1CAYAAAAs3LG4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAcxJREFUeF7twQENAAAAwqD3T20PBwQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        iVBORw0KGgoAAAANSUhEUgAAAJMAAAGpCAYAAACJcwRqAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQJSURBVHhe7dIxAQAADMOg+TfdmcgJGrhBRCYyMpGRiYxM
+        ZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQi
+        IxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZ
+        mcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjI
+        REYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYm
+        MjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKR
+        kYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmM
+        TGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRk
+        IiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMT
+        GZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnI
+        yERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERG
+        JjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIy
+        kZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJ
+        jExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExk
+        ZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIj
+        ExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZ
+        yMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhE
+        RiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERkewJvlMkOY0/qAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="DisplayControl2.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAKABU3lzdGVtLkRyYXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNmNWY3ZjExZDUwYTNhXV0sIG1zY29ybGliLCBW
+        ZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjc3YTVjNTYxOTM0
+        ZTA4OQwDAAAAUVN5c3RlbS5EcmF3aW5nLCBWZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwg
+        UHVibGljS2V5VG9rZW49YjAzZjVmN2YxMWQ1MGEzYQUBAAAAOFN5c3RlbS5Db2xsZWN0aW9ucy5HZW5l
+        cmljLkxpc3RgMVtbU3lzdGVtLkRyYXdpbmcuUG9pbnRGAwAAAAZfaXRlbXMFX3NpemUIX3ZlcnNpb24E
+        AAAXU3lzdGVtLkRyYXdpbmcuUG9pbnRGW10DAAAACAgCAAAACQQAAAAAAAAAAAAAAAcEAAAAAAEAAAAA
+        AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
+</value>
+  </data>
+  <data name="DisplayControl1.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAtEAAAByCAYAAACV3o1uAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAI1SURBVHhe7dYxAQAADMOg+TfdacgPKrgBAACJRAMAQCTR
+        AAAQSTQAAEQSDQAAkUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQ
+        STQAAEQSDQAAkUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQA
+        AEQSDQAAkUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQS
+        DQAAkUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAA
+        kUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQD
+        AEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQDAEAk
+        0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQDAEAk0QAA
+        EEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQDAEAk0QAAEEk0
+        AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQDAECyPaUejqptX7TK
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="DisplayControl1.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAKABU3lzdGVtLkRyYXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNmNWY3ZjExZDUwYTNhXV0sIG1zY29ybGliLCBW
+        ZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjc3YTVjNTYxOTM0
+        ZTA4OQwDAAAAUVN5c3RlbS5EcmF3aW5nLCBWZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwg
+        UHVibGljS2V5VG9rZW49YjAzZjVmN2YxMWQ1MGEzYQUBAAAAOFN5c3RlbS5Db2xsZWN0aW9ucy5HZW5l
+        cmljLkxpc3RgMVtbU3lzdGVtLkRyYXdpbmcuUG9pbnRGAwAAAAZfaXRlbXMFX3NpemUIX3ZlcnNpb24E
+        AAAXU3lzdGVtLkRyYXdpbmcuUG9pbnRGW10DAAAACAgCAAAACQQAAAAAAAAAAAAAAAcEAAAAAAEAAAAA
+        AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
+</value>
+  </data>
+  <data name="OverlayDisplay1.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAtEAAAExCAYAAAC6Zf4YAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANsSURBVHhe7cExAQAAAMKg9U9tDQ8gAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwJMa49MAAVhZ
-        PEAAAAAASUVORK5CYII=
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        +FIDbfgAATB52g8AAAAASUVORK5CYII=
 </value>
   </data>
 </root>
