--- a/Bwl.Imaging.Test/TestForm2.resx
+++ b/Bwl.Imaging.Test/TestForm2.resx
@@ -117,28 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="Button1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Button2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="DisplayControl2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="DisplayControl2.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAJMAAAGpCAYAAACJcwRqAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQJSURBVHhe7dIxAQAADMOg+TfdmcgJGrhBRCYyMpGRiYxM
-        ZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQi
-        IxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZ
-        mcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjI
-        REYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYm
-        MjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKR
-        kYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmM
-        TGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRk
-        IiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMT
-        GZnIyERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnI
-        yERGJjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERG
-        JjIykZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIy
-        kZGJjExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJ
-        jExkZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExk
-        ZCIjExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIj
-        ExmZyMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZ
-        yMhERiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERGJjIykZGJjExkZCIjExmZyMhE
-        RiYyMpGRiYxMZGQiIxMZmcjIREYmMjKRkYmMTGRkIiMTGZnIyERkewJvlMkOY0/qAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAJQAAAGcCAYAAAA/GIkNAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPqSURBVHhe7dIxAQAADMOg+TfdmcgJGrhBSChSQpESipRQ
+        pIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQi
+        JRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQp
+        oUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJ
+        RUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUoo
+        UkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKR
+        EoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqU
+        UKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSE
+        IiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUU
+        KaFICUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFI
+        CUVKKFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVK
+        KFJCkRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJC
+        kRKKlFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKK
+        lFCkhCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCk
+        hCIlFCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIl
+        FCmhSAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmh
+        SAlFSihSQpESipRQpIQiJRQpoUgJRUooUkKREoqUUKSEIiUUKaFICUVKKFJCkRKKlFCkhCIlFCmhSAlF
+        SihSQpESitD28rM+3AgFkjMAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="DisplayControl2.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -153,19 +162,21 @@
         AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
 </value>
   </data>
+  <metadata name="DisplayControl1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="DisplayControl1.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAtEAAAByCAYAAACV3o1uAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAI1SURBVHhe7dYxAQAADMOg+TfdacgPKrgBAACJRAMAQCTR
-        AAAQSTQAAEQSDQAAkUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQ
-        STQAAEQSDQAAkUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQA
-        AEQSDQAAkUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQS
-        DQAAkUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAA
-        kUQDAEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQD
-        AEAk0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQDAEAk
-        0QAAEEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQDAEAk0QAA
-        EEk0AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQDAEAk0QAAEEk0
-        AABEEg0AAJFEAwBAJNEAABBJNAAARBINAACRRAMAQCTRAAAQSTQAAEQSDQAAkUQDAECyPaUejqptX7TK
+        iVBORw0KGgoAAAANSUhEUgAAAtIAAABlCAYAAABgOgROAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH5SURBVHhe7dYxAQAwEAOh+jedavibQQVvAADAmUgDAEAg
+        0gAAEIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAA
+        EIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0
+        AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAE
+        Ig0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0A
+        AIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFI
+        AwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBA
+        INIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIA
+        ABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAGfbB1FUNxqWVIoE
         AAAAAElFTkSuQmCC
 </value>
   </data>
@@ -181,10 +192,13 @@
         AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
 </value>
   </data>
+  <metadata name="OverlayDisplay1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="OverlayDisplay1.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAtEAAAExCAYAAAC6Zf4YAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANsSURBVHhe7cExAQAAAMKg9U9tDQ8gAAAAAAAAAAAAAAAA
+        iVBORw0KGgoAAAANSUhEUgAAAtIAAAExCAYAAABRUkUbAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANtSURBVHhe7cExAQAAAMKg9U9tCU8gAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -199,7 +213,41 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        +FIDbfgAATB52g8AAAAASUVORK5CYII=
+        AOClBnK8AAEv42QnAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="DisplayControl3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="DisplayControl3.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAtIAAAByCAYAAAB+6TZtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAI3SURBVHhe7dYxAQAwEAOh+jedavibQQVvAADAmUgDAEAg
+        0gAAEIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAA
+        EIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0
+        AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAE
+        Ig0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0A
+        AIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFI
+        AwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBA
+        INIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIA
+        ABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIAABCI
+        NAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwDA2fYBnM5VAM3/
+        XMoAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="DisplayControl3.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAKABU3lzdGVtLkRyYXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNmNWY3ZjExZDUwYTNhXV0sIG1zY29ybGliLCBW
+        ZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjc3YTVjNTYxOTM0
+        ZTA4OQwDAAAAUVN5c3RlbS5EcmF3aW5nLCBWZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwg
+        UHVibGljS2V5VG9rZW49YjAzZjVmN2YxMWQ1MGEzYQUBAAAAOFN5c3RlbS5Db2xsZWN0aW9ucy5HZW5l
+        cmljLkxpc3RgMVtbU3lzdGVtLkRyYXdpbmcuUG9pbnRGAwAAAAZfaXRlbXMFX3NpemUIX3ZlcnNpb24E
+        AAAXU3lzdGVtLkRyYXdpbmcuUG9pbnRGW10DAAAACAgCAAAACQQAAAAAAAAAAAAAAAcEAAAAAAEAAAAA
+        AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
+</value>
+  </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
