Исправлена работа с фоновой заливкой.

--- a/Bwl.Imaging.Test/TestForm2.resx
+++ b/Bwl.Imaging.Test/TestForm2.resx
@@ -123,10 +123,41 @@
   <metadata name="Button2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="DisplayControl2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="DisplayControl3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="DisplayControl3.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAtIAAAByCAYAAAB+6TZtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAI3SURBVHhe7dYxAQAwEAOh+jedavibQQVvAADAmUgDAEAg
+        0gAAEIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAA
+        EIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0
+        AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAE
+        Ig0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0A
+        AIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFI
+        AwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBA
+        INIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIA
+        ABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIAABCI
+        NAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwDA2fYBnM5VAM3/
+        XMoAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="DisplayControl3.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAKABU3lzdGVtLkRyYXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNmNWY3ZjExZDUwYTNhXV0sIG1zY29ybGliLCBW
+        ZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjc3YTVjNTYxOTM0
+        ZTA4OQwDAAAAUVN5c3RlbS5EcmF3aW5nLCBWZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwg
+        UHVibGljS2V5VG9rZW49YjAzZjVmN2YxMWQ1MGEzYQUBAAAAOFN5c3RlbS5Db2xsZWN0aW9ucy5HZW5l
+        cmljLkxpc3RgMVtbU3lzdGVtLkRyYXdpbmcuUG9pbnRGAwAAAAZfaXRlbXMFX3NpemUIX3ZlcnNpb24E
+        AAAXU3lzdGVtLkRyYXdpbmcuUG9pbnRGW10DAAAACAgCAAAACQQAAAAAAAAAAAAAAAcEAAAAAAEAAAAA
+        AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
+</value>
+  </data>
+  <metadata name="DisplayControl2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="DisplayControl2.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAJQAAAGcCAYAAAA/GIkNAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -168,16 +199,16 @@
   <data name="DisplayControl1.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAtIAAABlCAYAAABgOgROAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH5SURBVHhe7dYxAQAwEAOh+jedavibQQVvAADAmUgDAEAg
-        0gAAEIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAA
-        EIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0
-        AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAE
-        Ig0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0A
-        AIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFI
-        AwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBA
-        INIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIA
-        ABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAGfbB1FUNxqWVIoE
-        AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHySURBVHhe7cjBCcAwAMSw7L902gHcg/5l0Mfn7QIAAL/l
+        BAAAtpwAAMCWEwAA2HICAABbTgAAYMsJAABsOQEAgC0nAACw5QQAALacAADAlhMAANhyAgAAW04AAGDL
+        CQAAbDkBAIAtJwAAsOUEAAC2nAAAwJYTAADYcgIAAFtOAABgywkAAGw5AQCALScAALDlBAAAtpwAAMCW
+        EwAA2HICAABbTgAAYMsJAABsOQEAgC0nAACw5QQAALacAADAlhMAANhyAgAAW04AAGDLCQAAbDkBAIAt
+        JwAAsOUEAAC2nAAAwJYTAADYcgIAAFtOAABgywkAAGw5AQCALScAALDlBAAAtpwAAMCWEwAA2HICAABb
+        TgAAYMsJAABsOQEAgC0nAACw5QQAALacAADAlhMAANhyAgAAW04AAGDLCQAAbDkBAIAtJwAAsOUEAAC2
+        nAAAwJYTAADYcgIAAFtOAABgywkAAGw5AQCALScAALDlBAAAtpwAAMCWEwAA2HICAABbTgAAYMsJAABs
+        OQEAgC0nAACw5QQAALacAADAlhMAANhyAgAAW04AAGDLCQAAbDkBAIAtJwAAsOUEAAC2nAAAwJYTAADY
+        cgIAAFtOAABgywkAAGw5AQCALScAALDlBAAAtpwAAMCWEwAA2HICAACfzn0A9qnNvFDZFwAAAAAASUVO
+        RK5CYII=
 </value>
   </data>
   <data name="DisplayControl1.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -214,37 +245,6 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AOClBnK8AAEv42QnAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="DisplayControl3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="DisplayControl3.Bitmap" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAtIAAAByCAYAAAB+6TZtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAI3SURBVHhe7dYxAQAwEAOh+jedavibQQVvAADAmUgDAEAg
-        0gAAEIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAA
-        EIg0AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0
-        AAAEIg0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAE
-        Ig0AAIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0A
-        AIFIAwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFI
-        AwBAINIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBA
-        INIAABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIA
-        ABCINAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwBAINIAABCI
-        NAAABCINAACBSAMAQCDSAAAQiDQAAAQiDQAAgUgDAEAg0gAAEIg0AAAEIg0AAIFIAwDA2fYBnM5VAM3/
-        XMoAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="DisplayControl3.MovePoints" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAKABU3lzdGVtLkRyYXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3Vs
-        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNmNWY3ZjExZDUwYTNhXV0sIG1zY29ybGliLCBW
-        ZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjc3YTVjNTYxOTM0
-        ZTA4OQwDAAAAUVN5c3RlbS5EcmF3aW5nLCBWZXJzaW9uPTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwg
-        UHVibGljS2V5VG9rZW49YjAzZjVmN2YxMWQ1MGEzYQUBAAAAOFN5c3RlbS5Db2xsZWN0aW9ucy5HZW5l
-        cmljLkxpc3RgMVtbU3lzdGVtLkRyYXdpbmcuUG9pbnRGAwAAAAZfaXRlbXMFX3NpemUIX3ZlcnNpb24E
-        AAAXU3lzdGVtLkRyYXdpbmcuUG9pbnRGW10DAAAACAgCAAAACQQAAAAAAAAAAAAAAAcEAAAAAAEAAAAA
-        AAAABBVTeXN0ZW0uRHJhd2luZy5Qb2ludEYDAAAACw==
 </value>
   </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
